Remove mouse follow circle, resolve issue with whitespace on div, add modal for newsletter

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,7 @@ a:hover {
 
 #selector {
   text-align: center;
+  height: 67px;
 }
 
 .active, .selector:hover {
@@ -269,7 +270,81 @@ a:hover {
     height: 300px;
 }
 
+/* need to resolve issue with modal opacity */
+.modal-backdrop
+{
+    opacity:1.0 !important;
+}
 
+.newsletter-section {
+  background-color: white;
+  text-align: center;
+  position: relative;
+  display: flex;
+}
+
+.newsletter-group {
+  text-align: left;
+}
+
+.newsletter-form {
+  width: 100%;
+  color: #4B5657;
+  background-color: rgba(150, 164, 165, 0.5);
+  border-radius: 5px;
+  padding: 30px 30px 30px 30px;
+}
+
+.newsletter-group{
+  padding-top: 10px;
+  text-align: left;
+}
+
+.text-input {
+  background-color: #F6F7F7;
+  color: #6E7F80;
+  width: 90%;
+  border: 2px solid rgba(150, 164, 165, 0.5);
+  border-radius: 5px;
+}
+
+.text-input:hover {
+  border-color: #FF834F;
+}
+
+.text-input:focus {
+  outline: #FF834F;
+  background-color: #F6F7F7;
+}
+
+.text-area {
+  height: 150px;
+  width: 100%;
+  border: 2px solid rgba(150, 164, 165, 0.5);
+  border-radius: 5px;
+  outline: #FF834F;
+  background-color: #F6F7F7;
+  color: #6E7F80;
+}
+
+.text-area:hover {
+  border-color: #FF834F;
+}
+
+.text-area:focus {
+  outline-color: #FF834F;
+  background-color: #F6F7F7;
+}
+
+.radio-label {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#radio-label-5k {
+  padding-left: 0;
+  padding-right: 10px;
+}
 
 /* --------------------------- FOOTER */
 
